tests/paczka1/fuzzy1/19616885.err
Error in line 5: A748 A474 27,46
Error in line 21: U9V1 S435 63,0
Error in line 6: C0oWRlwJk1 A474 82,5
Error in line 28: PAfkt22EPE A748 23,4
Error in line 35: C0oWRlwJk1 A748 40,4
Error in line 37: hjjUi A976 85,2
